--- a/.github/workflows/youthshare1.yml
+++ b/.github/workflows/youthshare1.yml
@@ -1,9 +1,9 @@
-name: 中青share1-午马
+name: 极限
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2-23/6 * * *'
+    - cron: '*/20 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest 
