--- a/.github/workflows/youthshare1.yml
+++ b/.github/workflows/youthshare1.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Checkout
         run: |
-          git clone https://github.com/jack552552/js.git ~/js
+          git clone https://github.com/kopopw/js.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
