--- a/youthshare1.yml
+++ b/youthshare1.yml
@@ -1,9 +1,9 @@
-name: 中青share1-午马
+name: 极限
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2-23/6 * * *'
+    - cron: '*/20 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest 
@@ -14,7 +14,7 @@ jobs:
 
       - name: Checkout
         run: |
-          git clone https://github.com/jack552552/js.git ~/js
+          git clone https://github.com/kopopw/js.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
