--- a/youthshare3.yml
+++ b/youthshare3.yml
@@ -3,7 +3,7 @@ name: 中青share3-191
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 0-23/6 * * *'
+    - cron: '*/40 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest 
@@ -14,7 +14,7 @@ jobs:
 
       - name: Checkout
         run: |
-          git clone https://github.com/jack552552/js.git ~/js
+          git clone https://github.com/kopopw/js.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
