--- a/youthshare5.yml
+++ b/youthshare5.yml
@@ -3,7 +3,7 @@ name: 中青share5-159
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 0-23/6 * * *'
+    - cron: '*/30 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest 
@@ -14,7 +14,7 @@ jobs:
 
       - name: Checkout
         run: |
-          git clone https://github.com/jack552552/js.git ~/js
+          git clone https://github.com/kopopw/js.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
